@@ -110,14 +110,16 @@ func (sS *SessionS) ListenAndServe(stopChan chan struct{}) {
 
 // Shutdown is called by engine to clear states
 func (sS *SessionS) Shutdown() (err error) {
-	var hasErr bool
-	for _, s := range sS.getSessions("", false) { // Force sessions shutdown
-		if err = sS.terminateSession(s, nil, nil, nil, false); err != nil {
-			hasErr = true
+	if len(sS.cgrCfg.SessionSCfg().ReplicationConns) == 0 {
+		var hasErr bool
+		for _, s := range sS.getSessions("", false) { // Force sessions shutdown
+			if err = sS.terminateSession(s, nil, nil, nil, false); err != nil {
+				hasErr = true
+			}
 		}
-	}
-	if hasErr {
-		return utils.ErrPartiallyExecuted
+		if hasErr {
+			return utils.ErrPartiallyExecuted
+		}
 	}
 	return
 }
